@@ -1,17 +1,201 @@
+<!-- Macros -->
+[% MACRO Button( f ) BLOCK -%]
+[%    IF f.tip %]<span class="button-help [% f.container_class %] tips"
+                           title="[% f.tip %]">[% END -%]
+      <button class="button [% f.class %]" name="_method" type="submit"
+              value="[% f.value %]">[% loc( f.label ) %]</button>
+[%    IF f.tip %]</span>[% END -%]
+[% END -%]
+[% MACRO CheckBox( f ) BLOCK -%]
+   <label class="label [% f.container_class %]">
+      <span class="field-label">[% loc( f.label ) %]</span>
+      <input [% IF f.checked %]checked="checked"[% END %]
+         name="[% f.name %]" type="checkbox" value="[% f.value %]">
+   </label>
+[% END -%]
+[% MACRO DateField( f ) BLOCK -%]
+[%    IF f.label -%]<label class="label">
+      <span class="field-label">[% loc( f.label ) %]</span>[% END -%]
+      <input
+[%    IF f.disabled %]disabled="disabled"[% END -%]
+[%       IF f.class; class = f.class; -%]
+[%       ELSE; class = 'standard-field'; END -%]
+         class="[% class %] pick-date" id="[% f.name %]"
+          name="[% f.name %]" value="[% f.value %]">
+[%    IF f.tip -%]
+      <span class="field-help [% f.container_class %] tips"
+            title="[% f.tip %]">&dagger;</span>
+[%    END -%]
+      <div class="field-group">
+         <span class="hidden" id="[% f.name %]_ajax"></span></div>
+[%    IF f.label -%]</label>[% END -%]
+[% END -%]
+[% MACRO Dispatch( f ) BLOCK -%]
+[%    IF f.type == 'date'; DateField( f ); END -%]
+[%    IF f.type == 'form'; Form( f ); END -%]
+[%    IF f.type == 'form_button' -%]
+[%       FormWithButton( f.href, f.class, f.value,
+                         f.form_name, f.tip, f.name, f.action ) -%]
+[%    END -%]
+[%    IF f.type == 'hidden'; HiddenField( f ); END -%]
+[%    IF f.type == 'image'; Image( f ); END -%]
+[%    IF f.type == 'link' -%]
+[%       LinkWithTips( f.href, f.class, f.value, f.hint,
+                       f.tip, f.name, f.container_class ) -%]
+[%    END -%]
+[%    IF f.type == 'list' -%]
+[%       FOR field IN f.list; -%]
+[%          IF !loop.first && f.separator; -%]
+               &nbsp;[% f.separator %]&nbsp;
+[%          END -%]
+[%          Dispatch( field ) -%]
+[%       END -%]
+[%    END -%]
+[%    IF f.type == 'select'; Select( f ); END -%]
+[%    IF f.type == 'table'; Table( f ); END -%]
+[% END -%]
+[% MACRO Form( f ) BLOCK -%]
+[%    IF f.class; class = f.class; -%]
+[%    ELSE; class = 'standard-form'; END -%]
+[%    IF f.method; method = f.method; ELSE; method = 'post'; END -%]
+   <form action="[% f.href %]" class="[% class %]"
+        enctype="application/x-www-form-urlencoded"
+         method="[% method %]" name="[% f.form_name %]">
+[%    Dispatch( f.content ) -%]
+   </form>
+[% END -%]
 [% MACRO FormWithButton( href, class, content, form, tip, id, value ) BLOCK -%]
-<form action="[% href %]" enctype="application/x-www-form-urlencoded"
-      method="post" name="[% form %]">
-   <span class="tips" title="[% page.hint _ ' ~ ' _ tip %]">
-      <button class="[% class %]" id="[% id %]" name="_method"
-               type="submit" value="[% value %]">[% content %]</button></span>
-</form>
+   <form action="[% href %]" enctype="application/x-www-form-urlencoded"
+         method="post" name="[% form %]">
+      <span class="button-help tips" title="[% page.hint _ ' ~ ' _ tip %]">
+         <button class="[% class %]" id="[% id %]" name="_method"
+            type="submit" value="[% value %]">[% content %]</button></span>
+   </form>
+[% END -%]
+[% MACRO HiddenField( f ) BLOCK -%]
+   <input name="[% f.name %]" type="hidden" value="[% f.value %]">
+[% END -%]
+[% MACRO Image( f ) BLOCK -%]
+   <img alt="[% f.tip %]" class="[% f.class %]" src=[% f.value %]>
 [% END -%]
 [% MACRO Link( href, class, content, id ) BLOCK -%]
-<a class="[% class %]" href="[% href %]"[% IF id -%]
- id="[% id %]"[% END %]>[% content %]</a>
+   <a class="[% class %]" href="[% href %]"[% IF id -%] id="[% id %]"[% END %]>
+[%    IF reference( content ) == 'HASH'; Dispatch( content ) -%]
+[%    ELSE; content; END %]</a>
 [% END -%]
-[% MACRO LinkWithTips( href, class, content, title, tip, id ) BLOCK -%]
-<span class="tips" title="[% title _ ' ~ ' _ tip %]">
-   [% Link( href, class, content, id ) -%]
-</span>
+[% MACRO LinkWithTips( href, class, text, title, tip, id, con_class ) BLOCK -%]
+   <span class="link-help [% con_class %] tips"
+         title="[% title _ ' ~ ' _ tip %]">[% Link( href, class, text, id ) %]
+   </span>
+[% END -%]
+[% MACRO PasswordField( f ) BLOCK -%]
+   <label class="label">
+      <span class="field-label">[% loc( f.label ) %]</span>
+      <input
+[%    IF f.autocomplete %]autocomplete="[% f.autocomplete %]"[% END -%]
+[%    IF f.class; class = f.class; -%]
+[%    ELSE; class = 'standard-field'; END -%]
+          class="[% class %]" id="[% f.name %]" name="[% f.name %]"
+           type="password">
+[%    IF f.tip -%]
+      <span class="field-help tips [% f.container_class %]"
+            title="[% f.tip %]">&dagger;</span>
+[%    END -%]
+   </label>
+[% END -%]
+[% MACRO Select( f ) BLOCK -%]
+[%    IF f.label -%]<label class="label">
+      <span class="field-label">[% loc( f.label ) %]</span>[% END %]
+[%    IF f.class; class = f.class; -%]
+[%    ELSE; class = 'standard-field'; END -%]
+      <select class="[% class %]" name="[% f.name %]"
+[%    IF f.multiple %]multiple="multiple" size="[% f.size %]" [% END -%]
+[%    IF f.onchange -%]
+         onchange="if (this.value) window.location.href=this.value"[% END -%]>
+[%    FOR option IN f.value -%]
+         <option [% IF option.selected %]selected="selected" [% END -%]
+             value="[% option.value %]">[% loc( option.label ) %]</option>
+[%    END -%]
+      </select>
+[%    IF f.tip -%]
+      <span class="field-help tips [% f.container_class %]"
+            title="[% f.tip %]">&dagger;</span>
+[%    END -%]
+[%    IF f.label -%]</label>[% END -%]
+[% END -%]
+[% MACRO Table( table ) BLOCK -%]
+[%    IF table.class; class = table.class; -%]
+[%    ELSE; class = 'standard-table'; END -%]
+   <table class="[% class %]">
+[%    IF table.headers.0 -%]
+      <tr>
+[%       FOR cell IN table.headers -%]
+        <th class="[% cell.class %]">[% cell.value %]</th>
+[%       END -%]
+      </tr>
+[%    END -%]
+[%    FOR row IN table.rows -%]
+[%       TableRow( row ) -%]
+[%    END -%]
+   </table>
+[% END -%]
+[% MACRO TableRow( row ) BLOCK -%]
+   <tr>
+[%    FOR cell IN row -%]
+      <td class="[% cell.class %]"
+             id="[% cell.name %]" colspan=[% cell.colspan %]>
+[%       IF reference( cell.value ) == 'HASH'; Dispatch( cell.value ) %]
+[%       ELSE; cell.value; END %]</td>
+[%    END -%]
+   </tr>
+[% END -%]
+[% MACRO TextArea( f ) BLOCK -%]
+   <label class="label">
+      <span class="field-label">[% loc( f.label ) %]</span>
+      <div class="field-container">
+         <textarea [% IF f.disabled %]disabled="disabled"[% END -%]
+[%    IF f.class; class = f.class; -%]
+[%    ELSE; class = 'standard-field'; END -%]
+            class="[% class %]" id="[% f.name %]"
+             name="[% f.name %]">[% f.value %]</textarea>
+      </div>
+[%    IF f.tip -%]
+      <span class="field-help tips [% f.container_class %]"
+            title="[% f.tip %]">&dagger;</span>
+[%    END -%]
+      <div class="field-group">
+         <span class="hidden" id="[% f.name %]_ajax"></span></div>
+   </label>
+[% END -%]
+[% MACRO TextField( f ) BLOCK -%]
+   <label class="label">
+      <span class="field-label">[% loc( f.label ) %]</span>
+      <input
+[%    IF f.disabled %]disabled="disabled"[% END -%]
+[%    IF f.class; class = f.class; -%]
+[%    ELSE; class = 'standard-field'; END -%]
+         class="[% class %]" id="[% f.name %]"
+          name="[% f.name %]" type="textfield" value="[% f.value %]">
+[%    IF f.tip -%]
+      <span class="field-help tips [% f.container_class %]"
+            title="[% f.tip %]">&dagger;</span>
+[%    END -%]
+      <div class="field-group">
+         <span class="hidden" id="[% f.name %]_ajax"></span></div>
+   </label>
+[% END -%]
+[% MACRO TimeField( f ) BLOCK -%]
+   <label class="label">
+      <span class="field-label">[% loc( f.label ) %]</span>
+      <input
+[%    IF f.disabled %]disabled="disabled"[% END -%]
+[%    IF f.class; class = f.class; -%]
+[%    ELSE; class = 'standard-field'; END -%]
+         class="[% class %] pick-time"
+            id="[% f.name %]" name="[% f.name %]" value="[% f.value %]">
+[%    IF f.tip -%]
+      <span class="field-help tips [% f.container_class %]"
+            title="[% f.tip %]">&dagger;</span>
+[%    END -%]
+   </label>
 [% END -%]
